Refactor: many things

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -269,6 +269,7 @@
     "consultations": {
       "upcoming_tab_label": "Επερχόμενες",
       "past_tab_label": "Προηγούμενες",
+      "schedule_button_label": "Προγραμματίστε μια συνεδρία",
       "sunday": "Κυρ",
       "monday": "Δευ",
       "tuesday": "Τρ",
