--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -269,6 +269,7 @@
     "consultations": {
       "upcoming_tab_label": "Առաջիկա",
       "past_tab_label": "Նախկին",
+      "schedule_button_label": "Պլանավորել խորհրդատվություն",
       "sunday": "Կիր․",
       "monday": "Երկշ․",
       "tuesday": "Երքշ․",
