--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -269,6 +269,7 @@
     "consultations": {
       "upcoming_tab_label": "Алдағы",
       "past_tab_label": "Бұрынғы",
+      "schedule_button_label": "Консультацияны жоспарлау",
       "sunday": "Жс",
       "monday": "Дс",
       "tuesday": "Сс",
