--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -269,6 +269,7 @@
     "consultations": {
       "upcoming_tab_label": "Urmează",
       "past_tab_label": "Trecut",
+      "schedule_button_label": "Programează o consultație",
       "sunday": "du",
       "monday": "lu",
       "tuesday": "ma",
