--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -990,7 +990,8 @@
       "header": "Συνεδρίες",
       "button_label": "Προγραμματίστε μια συνεδρία",
       "reject_consultation_success": "Η συνεδρία απορρίφθηκε με επιτυχία",
-      "accept_consultation_success": "Η συνεδρία έγινε δεκτή με επιτυχία"
+      "accept_consultation_success": "Η συνεδρία έγινε δεκτή με επιτυχία",
+      "suggestion_expired": "Η προτεινόμενη συνεδρία δεν μπορεί πλέον να γίνει δεκτή, καθώς απομένουν λιγότερες από 24 ώρες μέχρι την ώρα κράτησης"
     },
     "login-page": {
       "heading_1": "Καλωσορίσατε πίσω, χαιρόμαστε που σας ξαναβλέπουμε",
