--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -995,7 +995,8 @@
       "header": "Խորհրդատվություններ",
       "button_label": "Պլանավորել խորհրդատվություն",
       "reject_consultation_success": "Խորհրդատվությունը բարեհաջող մերժված է",
-      "accept_consultation_success": "Խորհրդատվությունը բարեհաջող ընդունված է"
+      "accept_consultation_success": "Խորհրդատվությունը բարեհաջող ընդունված է",
+      "suggestion_expired": "Առաջարկված խորհրդատվությունը այլևս չի կարող ընդունվել, քանի որ ամրագրման ժամից մինչև 24 ժամից պակաս է մնացել"
     },
     "login-page": {
       "heading_1": "Բարի վերադարձ, ուրախ ենք նորից տեսնել ձեզ։",
