--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -985,7 +985,8 @@
       "header": "Консультациялар",
       "button_label": "Консультацияны жоспарлау",
       "reject_consultation_success": "Консультациядан сәтті бас тарттыңыз",
-      "accept_consultation_success": "Консультация сәтті қабылданды"
+      "accept_consultation_success": "Консультация сәтті қабылданды",
+      "suggestion_expired": "Ұсынылған консультацияны қабылдау мүмкін емес, өйткені бронь уақытына 24 сағаттан аз қалды"
     },
     "login-page": {
       "heading_1": "Қайта оралуыңызбен, Сізді қайта көргенімізге қуаныштымыз",
