--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -987,7 +987,8 @@
       "header": "Консультации",
       "button_label": "Запланировать консультацию",
       "reject_consultation_success": "Консультация успешно отклонена",
-      "accept_consultation_success": "Консультация успешно принята"
+      "accept_consultation_success": "Консультация успешно принята",
+      "suggestion_expired": "Предложенную консультацию больше нельзя принять, так как до времени бронирования осталось менее 24 часов"
     },
     "login-page": {
       "heading_1": "С возвращением, рады видеть вас снова",
