--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -994,7 +994,8 @@
       "header": "Консультації",
       "button_label": "Заплануй консультацію",
       "reject_consultation_success": "Консультацію відхилено",
-      "accept_consultation_success": "Консультацію прийнято"
+      "accept_consultation_success": "Консультацію прийнято",
+      "suggestion_expired": "Запропоновану консультацію більше не можна прийняти, оскільки до часу бронювання залишилось менше 24 годин"
     },
     "login-page": {
       "heading_1": "Вітаємо з поверненням, раді знову тебе бачити",
