Refactor: design adjustments

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -521,6 +521,7 @@
       "sad": "Λυπημένος/η",
       "depressed": "Χάλια",
       "worried": "Αγχωμένος/η",
+      "history": "Ιστορικό",
       "heading": "Πώς νιώθετε σήμερα;",
       "mood_tracker": "Καταγραφή διάθεσης",
       "additional_comment_placeholder": "Τι σας έκανε να νιώσετε έτσι;",
