--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -521,6 +521,7 @@
       "sad": "Տխուր եմ",
       "depressed": "Ընկճված եմ",
       "worried": "Մտահոգ եմ",
+      "history": "Պատմություն",
       "heading": "Ինչպե՞ս եք զգում այսօր։",
       "mood_tracker": "Տրամադրության ստուգիչ",
       "additional_comment_placeholder": "Ի՞նչն ստիպեց այդպես զգալ։",
