--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -521,6 +521,7 @@
       "sad": "Көңілсіз",
       "depressed": "Депрессия",
       "worried": "Беймаза",
+      "history": "Тарих",
       "heading": "Бүгін жағдайыңыз қалай?",
       "mood_tracker": "Көңіл-күй трекері",
       "additional_comment_placeholder": "Сізді осылай сезінуге не себеп болды?",
