--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -521,6 +521,7 @@
       "sad": "Smutny/a",
       "depressed": "Przygnębiony/a",
       "worried": "Zmartwiony/a",
+      "history": "Historia",
       "heading": "Jak się dziś czujesz?",
       "mood_tracker": "Monitor nastroju",
       "additional_comment_placeholder": "Co sprawiło, że tak się poczułeś/aś?",
