--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -521,6 +521,7 @@
       "sad": "Trist",
       "depressed": "Deprimat",
       "worried": "Îngrijorat",
+      "history": "Istoric",
       "heading": "Cum vă simțiți astăzi?",
       "mood_tracker": "Urmărirea stării de spirit",
       "additional_comment_placeholder": "Ce v-a făcut să vă simțiți așa?",
