--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -521,6 +521,7 @@
       "sad": "Грустно",
       "depressed": "Депрессивно",
       "worried": "Тревожно",
+      "history": "История",
       "heading": "Как Вы себя чувствуете сегодня?",
       "mood_tracker": "Трекер настроения",
       "additional_comment_placeholder": "Что заставило Вас так себя чувствовать?",
