--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -521,6 +521,7 @@
       "sad": "Засмученим/ою",
       "depressed": "Пригніченим/ою",
       "worried": "Схвильованим/ою",
+      "history": "Історія",
       "heading": "Як ти почуваєшся сьогодні?",
       "mood_tracker": "Монітор настрою",
       "additional_comment_placeholder": "Що є причиною того, що ти себе так почуваєш?",
